[gd_scene load_steps=3 format=2]

[ext_resource path="res://gameplay/magnet/magnet.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 311.006

[node name="magnet" type="Area2D"]
script = ExtResource( 1 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_magnet_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_magnet_body_exited"]
